css/style.css
html,
body,
div,
span,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
img,
ol,
ul,
li,
fieldset,
form,
label,
legend,
article,
figure,
figcaption,
footer,
header,
menu,
nav,
section {
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  padding: 0;

  font-family: PTSans, Arial, serif;
  color: black;
}

h1 {
  font-weight: 700;
  font-size: 30px;
  font-family: PTSans, Arial, serif;
  color: black;
}

h2 {
  font-weight: 700;
  font-size: 14px;
  line-height: 18px;
  font-family: PTSans, Arial, serif;
  color: black;
}

.btn {
  display: inline-block;
  padding: 15px 20px;

  vertical-align: top;
  color: #ffffff;
  text-transform: uppercase;
  text-decoration: none;

  background: #000000;
  border-radius: 5px;
}
.clearfix:before,
.clearfix:after {
  content: "";

  display: table;
}

.clearfix:after {
  clear: both;
}

/* START index page*/
.main-header {
  padding: 5px 0;
}

.container {
  width: 940px;
  margin: 0 auto;
  padding-right: 10px;
  padding-left: 10px;
}

.main-navigation {
  float: left;
  width: 790px;
}

.main-navigation ul {
  margin: 0;
  padding: 0;

  list-style: none;
}

.main-navigation li {
  display: inline-block;
  margin-right: 5px;
}

.main-navigation a {
  font-weight: 700;
  font-size: 16px;
  text-transform: uppercase;
  text-decoration: none;
}

.user-block {
  float: right;
  width: 150px;
}

.main-container {
  margin: 30px auto;
}

.logo {
  width: 368px;
  margin: 0 auto;
  margin-bottom: 20px;
}

.featured-row {
  margin-bottom: 35px;
}

.features-item {
  float: left;
  width: 300px;
  margin-right: 20px;
}

.features-item:last-child {
  margin-right: 0;
}

.index-content {
  margin-bottom: 20px;
  padding: 35px 40px;
}

.content-column {
  width: 400px;
}

.to-left {
  float: left;
}

.to-right {
  float: right;
}

.main-footer {
  padding: 20px 0;
}

.footer-contacts {
  float: left;
  width: 380px;
  margin-right: 20px;
}

.footer-social {
  float: left;
  width: 140px;
  margin-right: 20px;
}

.footer-copyright {
  float: right;
  width: 200px;
}

/* END index page*/

/* START catalog page*/


.breadcrumbs-navigation ul {
  margin: 0;
  padding: 0;

  list-style: none;
}

.breadcrumbs-navigation li {
  display: inline-block;
  margin-right: 5px;
}

.breadcrumbs-navigation a {
  font-weight: 700;
  font-size: 14px;
  color: #000000;
  text-transform: uppercase;
  text-decoration: none;
}

.breadcrumbs-navigation .active a {
  color: #aba9a7;
}

.filters {
  float: left;
  width: 240px;
}

.control {
  display: block;
  width: 200px;
}





.catalog {
  float: right;
  width: 700px;

  font-size: 0;
}

.catalog-item {
  display: inline-block;
  width: 220px;
  padding-right: 5px;
  padding-left: 5px;

  font-weight: 700;
  font-size: 14px;
  line-height: 18px;
  font-family: PTSans, Arial, serif;
  vertical-align: top;
  color: black;
}





.pages ul {
  margin: 0;
  padding: 0;

  list-style: none;
}

.pages li {
  display: inline-block;
  margin-right: 5px;
}

.page {
  font-weight: 700;
  font-size: 16px;
  text-transform: uppercase;
  text-decoration: none;
}

/* END catalog page*/

/* START catalog-item page*/
.product-images {
  width: 460px;
}



.thumb {
  float: left;
  width: 150px;
}

.product-content {
  width: 460px;
  min-height: 50px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.product-warehouse {
  margin-bottom: 20px;
}

.product-stock {
  float: left;
}

.product-marking {
  float: right;
}

.product-description {
  margin-bottom: 20px;
}

.product-price-box {
  margin-bottom: 20px;
}

.product-package-content {
  margin-bottom: 20px;
}

/* END catalog-item page*/

